--- a/wiki/note-git-使用记录/index.html
+++ b/wiki/note-git-使用记录/index.html
@@ -35,13 +35,13 @@
 <p>
 蒋鑫. Git权威指南 机械工业出版社. Kindle 版本. 
 </p>
-<div id="outline-container-org338c524" class="outline-2">
-<h2 id="org338c524">git 独奏</h2>
-<div class="outline-text-2" id="text-org338c524">
+<div id="outline-container-orge81cc8a" class="outline-2">
+<h2 id="orge81cc8a">git 独奏</h2>
+<div class="outline-text-2" id="text-orge81cc8a">
 </div>
-<div id="outline-container-orgb4f7e06" class="outline-3">
-<h3 id="orgb4f7e06">git 初始化</h3>
-<div class="outline-text-3" id="text-orgb4f7e06">
+<div id="outline-container-org633c341" class="outline-3">
+<h3 id="org633c341">git 初始化</h3>
+<div class="outline-text-3" id="text-org633c341">
 <ul class="org-ul">
 <li><p>
 git init 
@@ -97,9 +97,9 @@ git config &lt;session&gt;.&lt;key&gt;
 </ul>
 </div>
 </div>
-<div id="outline-container-org59b2bec" class="outline-3">
-<h3 id="org59b2bec">git 暂存区</h3>
-<div class="outline-text-3" id="text-org59b2bec">
+<div id="outline-container-orgc6e0995" class="outline-3">
+<h3 id="orgc6e0995">git 暂存区</h3>
+<div class="outline-text-3" id="text-orgc6e0995">
 
 <div class="figure">
 <p><img src="http://7xpyfe.com1.z0.glb.clouddn.com/2017101515080826245091.png" alt="2017101515080826245091.png" />
@@ -169,9 +169,9 @@ git stash
 </ul>
 </div>
 </div>
-<div id="outline-container-orgfea0627" class="outline-3">
-<h3 id="orgfea0627">git reset 重置</h3>
-<div class="outline-text-3" id="text-orgfea0627">
+<div id="outline-container-org713fdb5" class="outline-3">
+<h3 id="org713fdb5">git reset 重置</h3>
+<div class="outline-text-3" id="text-org713fdb5">
 <ol class="org-ol">
 <li>git reset HEAD&lt;path&gt;  相当于取消 git add &lt;paths&gt; 操作</li>
 
@@ -193,9 +193,9 @@ git reset --hard master@{2}  重置master所有位置为两次改变之前的值
 </div>
 </div>
 
-<div id="outline-container-org4af8fa9" class="outline-3">
-<h3 id="org4af8fa9">git 检出</h3>
-<div class="outline-text-3" id="text-org4af8fa9">
+<div id="outline-container-org6a7e47d" class="outline-3">
+<h3 id="org6a7e47d">git 检出</h3>
+<div class="outline-text-3" id="text-org6a7e47d">
 <ul class="org-ul">
 <li><p>
 git checkout branch_name
@@ -208,9 +208,9 @@ git branch -v
 </ul>
 </div>
 </div>
-<div id="outline-container-org02ca10b" class="outline-3">
-<h3 id="org02ca10b">git 恢复进度</h3>
-<div class="outline-text-3" id="text-org02ca10b">
+<div id="outline-container-orgc9d4dc0" class="outline-3">
+<h3 id="orgc9d4dc0">git 恢复进度</h3>
+<div class="outline-text-3" id="text-orgc9d4dc0">
 <ul class="org-ul">
 <li><p>
 git stash
@@ -239,9 +239,9 @@ git stash branch &lt;branchname&gt;  基于进度创建分支
 </div>
 </div>
 
-<div id="outline-container-orgae07de8" class="outline-3">
-<h3 id="orgae07de8">git 基础操作</h3>
-<div class="outline-text-3" id="text-orgae07de8">
+<div id="outline-container-orgec6d0f7" class="outline-3">
+<h3 id="orgec6d0f7">git 基础操作</h3>
+<div class="outline-text-3" id="text-orgec6d0f7">
 <ul class="org-ul">
 <li><p>
 删除文件
@@ -325,9 +325,9 @@ git archive -o partial.tar HEAD src doc  只归档两个文件夹
 </div>
 </div>
 
-<div id="outline-container-org9e9feac" class="outline-3">
-<h3 id="org9e9feac">git tools</h3>
-<div class="outline-text-3" id="text-org9e9feac">
+<div id="outline-container-org652ee9b" class="outline-3">
+<h3 id="org652ee9b">git tools</h3>
+<div class="outline-text-3" id="text-org652ee9b">
 <p>
 版本库浏览器能更好看提交关系图
 </p>
@@ -367,9 +367,9 @@ git bisect start
 </div>
 </div>
 
-<div id="outline-container-org4377082" class="outline-3">
-<h3 id="org4377082">改变历史</h3>
-<div class="outline-text-3" id="text-org4377082">
+<div id="outline-container-org1a43e57" class="outline-3">
+<h3 id="org1a43e57">改变历史</h3>
+<div class="outline-text-3" id="text-org1a43e57">
 <ul class="org-ul">
 <li><p>
 单步悔棋
@@ -394,9 +394,9 @@ git commit -m "new reason "
 </div>
 </div>
 
-<div id="outline-container-orgd96a78f" class="outline-3">
-<h3 id="orgd96a78f">git克隆</h3>
-<div class="outline-text-3" id="text-orgd96a78f">
+<div id="outline-container-org2356d10" class="outline-3">
+<h3 id="org2356d10">git克隆</h3>
+<div class="outline-text-3" id="text-org2356d10">
 <ul class="org-ul">
 <li><p>
 git clone
@@ -420,13 +420,13 @@ git clone --mirror &lt;rep&gt; dir
 </div>
 </div>
 
-<div id="outline-container-org30d6a30" class="outline-2">
-<h2 id="org30d6a30">git 和声</h2>
-<div class="outline-text-2" id="text-org30d6a30">
+<div id="outline-container-org8d249c6" class="outline-2">
+<h2 id="org8d249c6">git 和声</h2>
+<div class="outline-text-2" id="text-org8d249c6">
 </div>
-<div id="outline-container-orgaab0e1d" class="outline-3">
-<h3 id="orgaab0e1d">git 工作协调</h3>
-<div class="outline-text-3" id="text-orgaab0e1d">
+<div id="outline-container-org0846f36" class="outline-3">
+<h3 id="org0846f36">git 工作协调</h3>
+<div class="outline-text-3" id="text-org0846f36">
 <ul class="org-ul">
 <li>支持的协议
 智能协议: 数据传输过程中有清晰的进度显示,按需传输，传输量小，速度快 (ssh,git,file//)  
@@ -466,9 +466,9 @@ git push
 </div>
 
 
-<div id="outline-container-org60a4bf0" class="outline-3">
-<h3 id="org60a4bf0">git 冲突解决</h3>
-<div class="outline-text-3" id="text-org60a4bf0">
+<div id="outline-container-org715957e" class="outline-3">
+<h3 id="org715957e">git 冲突解决</h3>
+<div class="outline-text-3" id="text-org715957e">
 <p>
 git merge
 </p>
@@ -532,13 +532,13 @@ git add / git reset
 </div>
 </div>
 
-<div id="outline-container-orgef4fdb2" class="outline-2">
-<h2 id="orgef4fdb2"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
-<div class="outline-text-2" id="text-orgef4fdb2">
+<div id="outline-container-orgc0bd4e4" class="outline-2">
+<h2 id="orgc0bd4e4"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
+<div class="outline-text-2" id="text-orgc0bd4e4">
 </div>
-<div id="outline-container-org3719765" class="outline-3">
-<h3 id="org3719765">git ls-files 乱码问题</h3>
-<div class="outline-text-3" id="text-org3719765">
+<div id="outline-container-orgb875d9f" class="outline-3">
+<h3 id="orgb875d9f">git ls-files 乱码问题</h3>
+<div class="outline-text-3" id="text-orgb875d9f">
 <p>
 在 <code>~/.gitconfig</code> 中添加如下内容
 </p>
