Update published html files, committed by org-page.

--- a/wiki/note-git-使用记录/index.html
+++ b/wiki/note-git-使用记录/index.html
@@ -35,13 +35,13 @@
 <p>
 蒋鑫. Git权威指南 机械工业出版社. Kindle 版本. 
 </p>
-<div id="outline-container-org9b21c5d" class="outline-2">
-<h2 id="org9b21c5d">git 独奏</h2>
-<div class="outline-text-2" id="text-org9b21c5d">
+<div id="outline-container-org42cd716" class="outline-2">
+<h2 id="org42cd716">git 独奏</h2>
+<div class="outline-text-2" id="text-org42cd716">
 </div>
-<div id="outline-container-org834e2c4" class="outline-3">
-<h3 id="org834e2c4">git 初始化</h3>
-<div class="outline-text-3" id="text-org834e2c4">
+<div id="outline-container-orgc36d0b4" class="outline-3">
+<h3 id="orgc36d0b4">git 初始化</h3>
+<div class="outline-text-3" id="text-orgc36d0b4">
 <ul class="org-ul">
 <li><p>
 git init 
@@ -97,9 +97,9 @@ git config &lt;session&gt;.&lt;key&gt;
 </ul>
 </div>
 </div>
-<div id="outline-container-org2977fc3" class="outline-3">
-<h3 id="org2977fc3">git 暂存区</h3>
-<div class="outline-text-3" id="text-org2977fc3">
+<div id="outline-container-orge5fc491" class="outline-3">
+<h3 id="orge5fc491">git 暂存区</h3>
+<div class="outline-text-3" id="text-orge5fc491">
 
 <div class="figure">
 <p><img src="http://7xpyfe.com1.z0.glb.clouddn.com/2017101515080826245091.png" alt="2017101515080826245091.png" />
@@ -169,9 +169,9 @@ git stash
 </ul>
 </div>
 </div>
-<div id="outline-container-org9a3dddd" class="outline-3">
-<h3 id="org9a3dddd">git reset 重置</h3>
-<div class="outline-text-3" id="text-org9a3dddd">
+<div id="outline-container-org46c6e1f" class="outline-3">
+<h3 id="org46c6e1f">git reset 重置</h3>
+<div class="outline-text-3" id="text-org46c6e1f">
 <ol class="org-ol">
 <li>git reset HEAD&lt;path&gt;  相当于取消 git add &lt;paths&gt; 操作</li>
 
@@ -193,9 +193,9 @@ git reset --hard master@{2}  重置master所有位置为两次改变之前的值
 </div>
 </div>
 
-<div id="outline-container-orgf200aea" class="outline-3">
-<h3 id="orgf200aea">git 检出</h3>
-<div class="outline-text-3" id="text-orgf200aea">
+<div id="outline-container-org40dbf49" class="outline-3">
+<h3 id="org40dbf49">git 检出</h3>
+<div class="outline-text-3" id="text-org40dbf49">
 <ul class="org-ul">
 <li><p>
 git checkout branch_name
@@ -208,9 +208,9 @@ git branch -v
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb8f2d46" class="outline-3">
-<h3 id="orgb8f2d46">git 恢复进度</h3>
-<div class="outline-text-3" id="text-orgb8f2d46">
+<div id="outline-container-org3cf4b42" class="outline-3">
+<h3 id="org3cf4b42">git 恢复进度</h3>
+<div class="outline-text-3" id="text-org3cf4b42">
 <ul class="org-ul">
 <li><p>
 git stash
@@ -239,9 +239,9 @@ git stash branch &lt;branchname&gt;  基于进度创建分支
 </div>
 </div>
 
-<div id="outline-container-org3296553" class="outline-3">
-<h3 id="org3296553">git 基础操作</h3>
-<div class="outline-text-3" id="text-org3296553">
+<div id="outline-container-orga0b9d92" class="outline-3">
+<h3 id="orga0b9d92">git 基础操作</h3>
+<div class="outline-text-3" id="text-orga0b9d92">
 <ul class="org-ul">
 <li><p>
 删除文件
@@ -325,9 +325,9 @@ git archive -o partial.tar HEAD src doc  只归档两个文件夹
 </div>
 </div>
 
-<div id="outline-container-orgfd4d1eb" class="outline-3">
-<h3 id="orgfd4d1eb">git tools</h3>
-<div class="outline-text-3" id="text-orgfd4d1eb">
+<div id="outline-container-org623aa05" class="outline-3">
+<h3 id="org623aa05">git tools</h3>
+<div class="outline-text-3" id="text-org623aa05">
 <p>
 版本库浏览器能更好看提交关系图
 </p>
@@ -367,9 +367,9 @@ git bisect start
 </div>
 </div>
 
-<div id="outline-container-orgc4f9163" class="outline-3">
-<h3 id="orgc4f9163">改变历史</h3>
-<div class="outline-text-3" id="text-orgc4f9163">
+<div id="outline-container-org2283031" class="outline-3">
+<h3 id="org2283031">改变历史</h3>
+<div class="outline-text-3" id="text-org2283031">
 <ul class="org-ul">
 <li><p>
 单步悔棋
@@ -394,9 +394,9 @@ git commit -m "new reason "
 </div>
 </div>
 
-<div id="outline-container-orgd935d99" class="outline-3">
-<h3 id="orgd935d99">git克隆</h3>
-<div class="outline-text-3" id="text-orgd935d99">
+<div id="outline-container-org430db72" class="outline-3">
+<h3 id="org430db72">git克隆</h3>
+<div class="outline-text-3" id="text-org430db72">
 <ul class="org-ul">
 <li><p>
 git clone
@@ -420,13 +420,13 @@ git clone --mirror &lt;rep&gt; dir
 </div>
 </div>
 
-<div id="outline-container-org7582d3b" class="outline-2">
-<h2 id="org7582d3b">git 和声</h2>
-<div class="outline-text-2" id="text-org7582d3b">
+<div id="outline-container-orgdc4d985" class="outline-2">
+<h2 id="orgdc4d985">git 和声</h2>
+<div class="outline-text-2" id="text-orgdc4d985">
 </div>
-<div id="outline-container-org340712f" class="outline-3">
-<h3 id="org340712f">git 工作协调</h3>
-<div class="outline-text-3" id="text-org340712f">
+<div id="outline-container-org57dafb3" class="outline-3">
+<h3 id="org57dafb3">git 工作协调</h3>
+<div class="outline-text-3" id="text-org57dafb3">
 <ul class="org-ul">
 <li>支持的协议
 智能协议: 数据传输过程中有清晰的进度显示,按需传输，传输量小，速度快 (ssh,git,file//)  
@@ -466,9 +466,9 @@ git push
 </div>
 
 
-<div id="outline-container-org895ad85" class="outline-3">
-<h3 id="org895ad85">git 冲突解决</h3>
-<div class="outline-text-3" id="text-org895ad85">
+<div id="outline-container-org3b991d1" class="outline-3">
+<h3 id="org3b991d1">git 冲突解决</h3>
+<div class="outline-text-3" id="text-org3b991d1">
 <p>
 git merge
 </p>
@@ -532,13 +532,13 @@ git add / git reset
 </div>
 </div>
 
-<div id="outline-container-org8efe053" class="outline-2">
-<h2 id="org8efe053"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
-<div class="outline-text-2" id="text-org8efe053">
+<div id="outline-container-orge4bcb1d" class="outline-2">
+<h2 id="orge4bcb1d"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
+<div class="outline-text-2" id="text-orge4bcb1d">
 </div>
-<div id="outline-container-org835d8a7" class="outline-3">
-<h3 id="org835d8a7">git ls-files 乱码问题</h3>
-<div class="outline-text-3" id="text-org835d8a7">
+<div id="outline-container-org55f1ea8" class="outline-3">
+<h3 id="org55f1ea8">git ls-files 乱码问题</h3>
+<div class="outline-text-3" id="text-org55f1ea8">
 <p>
 在 <code>~/.gitconfig</code> 中添加如下内容
 </p>
