--- a/wiki/note-spark-use/index.html
+++ b/wiki/note-spark-use/index.html
@@ -35,9 +35,9 @@
 <p>
 Spark快速大数据分析[美] 卡劳（Holden Karau）
 </p>
-<div id="outline-container-org44239cb" class="outline-2">
-<h2 id="org44239cb">what is spark</h2>
-<div class="outline-text-2" id="text-org44239cb">
+<div id="outline-container-org05a6ac7" class="outline-2">
+<h2 id="org05a6ac7">what is spark</h2>
+<div class="outline-text-2" id="text-org05a6ac7">
 <p>
 spark 是一个用来实现快速而通用的集群计算的平台
 </p>
@@ -66,16 +66,16 @@ python shell / scala shell</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org0aa2ce2" class="outline-2">
-<h2 id="org0aa2ce2">RDD</h2>
-<div class="outline-text-2" id="text-org0aa2ce2">
+<div id="outline-container-org7ec027a" class="outline-2">
+<h2 id="org7ec027a">RDD</h2>
+<div class="outline-text-2" id="text-org7ec027a">
 <p>
 RDD(resilient distributed dataset)
 </p>
 </div>
-<div id="outline-container-org8b7949b" class="outline-3">
-<h3 id="org8b7949b">RDD基础</h3>
-<div class="outline-text-3" id="text-org8b7949b">
+<div id="outline-container-orgb005ad9" class="outline-3">
+<h3 id="orgb005ad9">RDD基础</h3>
+<div class="outline-text-3" id="text-orgb005ad9">
 <p>
 Spark中的RDD是一个不可变的分布式对象集合
 </p>
@@ -83,30 +83,30 @@ Spark中的RDD是一个不可变的分布式对象集合
 </div>
 </div>
 
-<div id="outline-container-org83a790d" class="outline-2">
-<h2 id="org83a790d">spark use</h2>
-<div class="outline-text-2" id="text-org83a790d">
+<div id="outline-container-org5fab0d9" class="outline-2">
+<h2 id="org5fab0d9">spark use</h2>
+<div class="outline-text-2" id="text-org5fab0d9">
 </div>
-<div id="outline-container-org33ab745" class="outline-3">
-<h3 id="org33ab745">spark base</h3>
-<div class="outline-text-3" id="text-org33ab745">
+<div id="outline-container-org9bd50d6" class="outline-3">
+<h3 id="org9bd50d6">spark base</h3>
+<div class="outline-text-3" id="text-org9bd50d6">
 <p>
 rdd(resilient distributed dataset)
 </p>
 </div>
 </div>
-<div id="outline-container-orgeaa39f4" class="outline-3">
-<h3 id="orgeaa39f4">spark install</h3>
-<div class="outline-text-3" id="text-orgeaa39f4">
+<div id="outline-container-org17758ab" class="outline-3">
+<h3 id="org17758ab">spark install</h3>
+<div class="outline-text-3" id="text-org17758ab">
 <p>
 函数式编程
 shell下执行:paste
 </p>
 </div>
 </div>
-<div id="outline-container-orgf1a7fda" class="outline-3">
-<h3 id="orgf1a7fda">spark shell</h3>
-<div class="outline-text-3" id="text-orgf1a7fda">
+<div id="outline-container-org4d47786" class="outline-3">
+<h3 id="org4d47786">spark shell</h3>
+<div class="outline-text-3" id="text-org4d47786">
 <p>
 bin/spark-shell
 </p>
@@ -126,9 +126,9 @@ filter()</li>
 </div>
 </div>
 
-<div id="outline-container-org681cd4b" class="outline-3">
-<h3 id="org681cd4b">idea spark scala</h3>
-<div class="outline-text-3" id="text-org681cd4b">
+<div id="outline-container-org88a14cd" class="outline-3">
+<h3 id="org88a14cd">idea spark scala</h3>
+<div class="outline-text-3" id="text-org88a14cd">
 <p>
 scala 项目手动打包
 删除scala 和spark的包
@@ -144,25 +144,25 @@ sbt 构建项目 需要等待sbt版本下载好才会生成src目录
 </div>
 </div>
 
-<div id="outline-container-org90979d7" class="outline-3">
-<h3 id="org90979d7">idea spark java</h3>
-<div class="outline-text-3" id="text-org90979d7">
+<div id="outline-container-org39b21fe" class="outline-3">
+<h3 id="org39b21fe">idea spark java</h3>
+<div class="outline-text-3" id="text-org39b21fe">
 <ol class="org-ol">
 <li>jre 1.5 换成1.8</li>
 </ol>
 </div>
 </div>
-<div id="outline-container-org72b8296" class="outline-3">
-<h3 id="org72b8296">rdd &amp; dataframe</h3>
+<div id="outline-container-orgbacfb67" class="outline-3">
+<h3 id="orgbacfb67">rdd &amp; dataframe</h3>
 </div>
 </div>
-<div id="outline-container-orgaf56db7" class="outline-2">
-<h2 id="orgaf56db7">docker spark</h2>
-<div class="outline-text-2" id="text-orgaf56db7">
+<div id="outline-container-org2db53a9" class="outline-2">
+<h2 id="org2db53a9">docker spark</h2>
+<div class="outline-text-2" id="text-org2db53a9">
 </div>
-<div id="outline-container-org249f67c" class="outline-3">
-<h3 id="org249f67c">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
-<div class="outline-text-3" id="text-org249f67c">
+<div id="outline-container-org6e95be7" class="outline-3">
+<h3 id="org6e95be7">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
+<div class="outline-text-3" id="text-org6e95be7">
 <p>
 refer : <a href="http://blog.csdn.net/gogo_yao/article/details/76863201">http://blog.csdn.net/gogo_yao/article/details/76863201</a>
 </p>
@@ -213,17 +213,17 @@ cd <i>root</i>.local/spark-2.2.0-bin-without-hadoop/sbin; sh start-all.sh
 </ol>
 </div>
 </div>
-<div id="outline-container-orgc7c09de" class="outline-3">
-<h3 id="orgc7c09de">docker search spark</h3>
-<div class="outline-text-3" id="text-orgc7c09de">
+<div id="outline-container-org3ca61cd" class="outline-3">
+<h3 id="org3ca61cd">docker search spark</h3>
+<div class="outline-text-3" id="text-org3ca61cd">
 <p>
 docker pull sequenceiq/spark:1.6.0
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-orgb3bde7e" class="outline-2">
-<h2 id="orgb3bde7e">docker hbase</h2>
+<div id="outline-container-org24d8b1f" class="outline-2">
+<h2 id="org24d8b1f">docker hbase</h2>
 </div>
 
 </div>
