Update published html files, committed by org-page.

--- a/wiki/note-spark-use/index.html
+++ b/wiki/note-spark-use/index.html
@@ -35,9 +35,9 @@
 <p>
 Spark快速大数据分析[美] 卡劳（Holden Karau）
 </p>
-<div id="outline-container-orgba6e8af" class="outline-2">
-<h2 id="orgba6e8af">what is spark</h2>
-<div class="outline-text-2" id="text-orgba6e8af">
+<div id="outline-container-orgd8984ff" class="outline-2">
+<h2 id="orgd8984ff">what is spark</h2>
+<div class="outline-text-2" id="text-orgd8984ff">
 <p>
 spark 是一个用来实现快速而通用的集群计算的平台
 </p>
@@ -66,16 +66,16 @@ python shell / scala shell</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org9291f9b" class="outline-2">
-<h2 id="org9291f9b">RDD</h2>
-<div class="outline-text-2" id="text-org9291f9b">
+<div id="outline-container-org0fadfa9" class="outline-2">
+<h2 id="org0fadfa9">RDD</h2>
+<div class="outline-text-2" id="text-org0fadfa9">
 <p>
 RDD(resilient distributed dataset)
 </p>
 </div>
-<div id="outline-container-org60b8972" class="outline-3">
-<h3 id="org60b8972">RDD基础</h3>
-<div class="outline-text-3" id="text-org60b8972">
+<div id="outline-container-org533c89f" class="outline-3">
+<h3 id="org533c89f">RDD基础</h3>
+<div class="outline-text-3" id="text-org533c89f">
 <p>
 Spark中的RDD是一个不可变的分布式对象集合
 </p>
@@ -83,30 +83,30 @@ Spark中的RDD是一个不可变的分布式对象集合
 </div>
 </div>
 
-<div id="outline-container-org80abc66" class="outline-2">
-<h2 id="org80abc66">spark use</h2>
-<div class="outline-text-2" id="text-org80abc66">
+<div id="outline-container-orgfc900ba" class="outline-2">
+<h2 id="orgfc900ba">spark use</h2>
+<div class="outline-text-2" id="text-orgfc900ba">
 </div>
-<div id="outline-container-org7793e87" class="outline-3">
-<h3 id="org7793e87">spark base</h3>
-<div class="outline-text-3" id="text-org7793e87">
+<div id="outline-container-org52e6b7c" class="outline-3">
+<h3 id="org52e6b7c">spark base</h3>
+<div class="outline-text-3" id="text-org52e6b7c">
 <p>
 rdd(resilient distributed dataset)
 </p>
 </div>
 </div>
-<div id="outline-container-org8e79506" class="outline-3">
-<h3 id="org8e79506">spark install</h3>
-<div class="outline-text-3" id="text-org8e79506">
+<div id="outline-container-org48e4dc2" class="outline-3">
+<h3 id="org48e4dc2">spark install</h3>
+<div class="outline-text-3" id="text-org48e4dc2">
 <p>
 函数式编程
 shell下执行:paste
 </p>
 </div>
 </div>
-<div id="outline-container-orgaa2e911" class="outline-3">
-<h3 id="orgaa2e911">spark shell</h3>
-<div class="outline-text-3" id="text-orgaa2e911">
+<div id="outline-container-org0bd8e6f" class="outline-3">
+<h3 id="org0bd8e6f">spark shell</h3>
+<div class="outline-text-3" id="text-org0bd8e6f">
 <p>
 bin/spark-shell
 </p>
@@ -126,9 +126,9 @@ filter()</li>
 </div>
 </div>
 
-<div id="outline-container-org2eef1c8" class="outline-3">
-<h3 id="org2eef1c8">idea spark scala</h3>
-<div class="outline-text-3" id="text-org2eef1c8">
+<div id="outline-container-orgb0665e3" class="outline-3">
+<h3 id="orgb0665e3">idea spark scala</h3>
+<div class="outline-text-3" id="text-orgb0665e3">
 <p>
 scala 项目手动打包
 删除scala 和spark的包
@@ -144,25 +144,25 @@ sbt 构建项目 需要等待sbt版本下载好才会生成src目录
 </div>
 </div>
 
-<div id="outline-container-org83945f5" class="outline-3">
-<h3 id="org83945f5">idea spark java</h3>
-<div class="outline-text-3" id="text-org83945f5">
+<div id="outline-container-org7731c9a" class="outline-3">
+<h3 id="org7731c9a">idea spark java</h3>
+<div class="outline-text-3" id="text-org7731c9a">
 <ol class="org-ol">
 <li>jre 1.5 换成1.8</li>
 </ol>
 </div>
 </div>
-<div id="outline-container-orga0416da" class="outline-3">
-<h3 id="orga0416da">rdd &amp; dataframe</h3>
+<div id="outline-container-org95f8138" class="outline-3">
+<h3 id="org95f8138">rdd &amp; dataframe</h3>
 </div>
 </div>
-<div id="outline-container-org7e91d86" class="outline-2">
-<h2 id="org7e91d86">docker spark</h2>
-<div class="outline-text-2" id="text-org7e91d86">
+<div id="outline-container-orgbe9d713" class="outline-2">
+<h2 id="orgbe9d713">docker spark</h2>
+<div class="outline-text-2" id="text-orgbe9d713">
 </div>
-<div id="outline-container-org2b192e3" class="outline-3">
-<h3 id="org2b192e3">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
-<div class="outline-text-3" id="text-org2b192e3">
+<div id="outline-container-org9879c7b" class="outline-3">
+<h3 id="org9879c7b">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
+<div class="outline-text-3" id="text-org9879c7b">
 <p>
 refer : <a href="http://blog.csdn.net/gogo_yao/article/details/76863201">http://blog.csdn.net/gogo_yao/article/details/76863201</a>
 </p>
@@ -213,17 +213,17 @@ cd <i>root</i>.local/spark-2.2.0-bin-without-hadoop/sbin; sh start-all.sh
 </ol>
 </div>
 </div>
-<div id="outline-container-org0ca1ba4" class="outline-3">
-<h3 id="org0ca1ba4">docker search spark</h3>
-<div class="outline-text-3" id="text-org0ca1ba4">
+<div id="outline-container-orga7fb668" class="outline-3">
+<h3 id="orga7fb668">docker search spark</h3>
+<div class="outline-text-3" id="text-orga7fb668">
 <p>
 docker pull sequenceiq/spark:1.6.0
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-org95ccb24" class="outline-2">
-<h2 id="org95ccb24">docker hbase</h2>
+<div id="outline-container-org139a673" class="outline-2">
+<h2 id="org139a673">docker hbase</h2>
 </div>
 
 </div>
