--- a/wiki/note-git-使用记录/index.html
+++ b/wiki/note-git-使用记录/index.html
@@ -35,13 +35,13 @@
 <p>
 蒋鑫. Git权威指南 机械工业出版社. Kindle 版本. 
 </p>
-<div id="outline-container-org9701890" class="outline-2">
-<h2 id="org9701890">git 独奏</h2>
-<div class="outline-text-2" id="text-org9701890">
+<div id="outline-container-org01f5d4c" class="outline-2">
+<h2 id="org01f5d4c">git 独奏</h2>
+<div class="outline-text-2" id="text-org01f5d4c">
 </div>
-<div id="outline-container-org35c02f6" class="outline-3">
-<h3 id="org35c02f6">git 初始化</h3>
-<div class="outline-text-3" id="text-org35c02f6">
+<div id="outline-container-org38d1e6b" class="outline-3">
+<h3 id="org38d1e6b">git 初始化</h3>
+<div class="outline-text-3" id="text-org38d1e6b">
 <ul class="org-ul">
 <li><p>
 git init 
@@ -97,9 +97,9 @@ git config &lt;session&gt;.&lt;key&gt;
 </ul>
 </div>
 </div>
-<div id="outline-container-org3565203" class="outline-3">
-<h3 id="org3565203">git 暂存区</h3>
-<div class="outline-text-3" id="text-org3565203">
+<div id="outline-container-org2f6f736" class="outline-3">
+<h3 id="org2f6f736">git 暂存区</h3>
+<div class="outline-text-3" id="text-org2f6f736">
 
 <div class="figure">
 <p><img src="http://7xpyfe.com1.z0.glb.clouddn.com/2017101515080826245091.png" alt="2017101515080826245091.png" />
@@ -169,9 +169,9 @@ git stash
 </ul>
 </div>
 </div>
-<div id="outline-container-org419ad30" class="outline-3">
-<h3 id="org419ad30">git reset 重置</h3>
-<div class="outline-text-3" id="text-org419ad30">
+<div id="outline-container-orgd3fcec5" class="outline-3">
+<h3 id="orgd3fcec5">git reset 重置</h3>
+<div class="outline-text-3" id="text-orgd3fcec5">
 <ol class="org-ol">
 <li>git reset HEAD&lt;path&gt;  相当于取消 git add &lt;paths&gt; 操作</li>
 
@@ -193,9 +193,9 @@ git reset --hard master@{2}  重置master所有位置为两次改变之前的值
 </div>
 </div>
 
-<div id="outline-container-orgc0ac968" class="outline-3">
-<h3 id="orgc0ac968">git 检出</h3>
-<div class="outline-text-3" id="text-orgc0ac968">
+<div id="outline-container-org77a79a3" class="outline-3">
+<h3 id="org77a79a3">git 检出</h3>
+<div class="outline-text-3" id="text-org77a79a3">
 <ul class="org-ul">
 <li><p>
 git checkout branch_name
@@ -208,9 +208,9 @@ git branch -v
 </ul>
 </div>
 </div>
-<div id="outline-container-org272a6d8" class="outline-3">
-<h3 id="org272a6d8">git 恢复进度</h3>
-<div class="outline-text-3" id="text-org272a6d8">
+<div id="outline-container-org94e61dc" class="outline-3">
+<h3 id="org94e61dc">git 恢复进度</h3>
+<div class="outline-text-3" id="text-org94e61dc">
 <ul class="org-ul">
 <li><p>
 git stash
@@ -239,9 +239,9 @@ git stash branch &lt;branchname&gt;  基于进度创建分支
 </div>
 </div>
 
-<div id="outline-container-org44676e7" class="outline-3">
-<h3 id="org44676e7">git 基础操作</h3>
-<div class="outline-text-3" id="text-org44676e7">
+<div id="outline-container-orgf0fca5e" class="outline-3">
+<h3 id="orgf0fca5e">git 基础操作</h3>
+<div class="outline-text-3" id="text-orgf0fca5e">
 <ul class="org-ul">
 <li><p>
 删除文件
@@ -325,9 +325,9 @@ git archive -o partial.tar HEAD src doc  只归档两个文件夹
 </div>
 </div>
 
-<div id="outline-container-org5ef4215" class="outline-3">
-<h3 id="org5ef4215">git tools</h3>
-<div class="outline-text-3" id="text-org5ef4215">
+<div id="outline-container-orgbcc1de2" class="outline-3">
+<h3 id="orgbcc1de2">git tools</h3>
+<div class="outline-text-3" id="text-orgbcc1de2">
 <p>
 版本库浏览器能更好看提交关系图
 </p>
@@ -367,9 +367,9 @@ git bisect start
 </div>
 </div>
 
-<div id="outline-container-orgf1ac5a5" class="outline-3">
-<h3 id="orgf1ac5a5">改变历史</h3>
-<div class="outline-text-3" id="text-orgf1ac5a5">
+<div id="outline-container-org2e81449" class="outline-3">
+<h3 id="org2e81449">改变历史</h3>
+<div class="outline-text-3" id="text-org2e81449">
 <ul class="org-ul">
 <li><p>
 单步悔棋
@@ -394,9 +394,9 @@ git commit -m "new reason "
 </div>
 </div>
 
-<div id="outline-container-org8f81a8e" class="outline-3">
-<h3 id="org8f81a8e">git克隆</h3>
-<div class="outline-text-3" id="text-org8f81a8e">
+<div id="outline-container-orgd4aae1e" class="outline-3">
+<h3 id="orgd4aae1e">git克隆</h3>
+<div class="outline-text-3" id="text-orgd4aae1e">
 <ul class="org-ul">
 <li><p>
 git clone
@@ -420,13 +420,13 @@ git clone --mirror &lt;rep&gt; dir
 </div>
 </div>
 
-<div id="outline-container-orgfc4d388" class="outline-2">
-<h2 id="orgfc4d388">git 和声</h2>
-<div class="outline-text-2" id="text-orgfc4d388">
+<div id="outline-container-org66694b0" class="outline-2">
+<h2 id="org66694b0">git 和声</h2>
+<div class="outline-text-2" id="text-org66694b0">
 </div>
-<div id="outline-container-orgc6608c6" class="outline-3">
-<h3 id="orgc6608c6">git 工作协调</h3>
-<div class="outline-text-3" id="text-orgc6608c6">
+<div id="outline-container-org78627b8" class="outline-3">
+<h3 id="org78627b8">git 工作协调</h3>
+<div class="outline-text-3" id="text-org78627b8">
 <ul class="org-ul">
 <li>支持的协议
 智能协议: 数据传输过程中有清晰的进度显示,按需传输，传输量小，速度快 (ssh,git,file//)  
@@ -466,9 +466,9 @@ git push
 </div>
 
 
-<div id="outline-container-org32a8721" class="outline-3">
-<h3 id="org32a8721">git 冲突解决</h3>
-<div class="outline-text-3" id="text-org32a8721">
+<div id="outline-container-org34ccb45" class="outline-3">
+<h3 id="org34ccb45">git 冲突解决</h3>
+<div class="outline-text-3" id="text-org34ccb45">
 <p>
 git merge
 </p>
@@ -532,13 +532,13 @@ git add / git reset
 </div>
 </div>
 
-<div id="outline-container-org67b1bd0" class="outline-2">
-<h2 id="org67b1bd0"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
-<div class="outline-text-2" id="text-org67b1bd0">
+<div id="outline-container-org3134d68" class="outline-2">
+<h2 id="org3134d68"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
+<div class="outline-text-2" id="text-org3134d68">
 </div>
-<div id="outline-container-orga65e8fa" class="outline-3">
-<h3 id="orga65e8fa">git ls-files 乱码问题</h3>
-<div class="outline-text-3" id="text-orga65e8fa">
+<div id="outline-container-org478dd06" class="outline-3">
+<h3 id="org478dd06">git ls-files 乱码问题</h3>
+<div class="outline-text-3" id="text-org478dd06">
 <p>
 在 <code>~/.gitconfig</code> 中添加如下内容
 </p>
