--- a/wiki/note-git-使用记录/index.html
+++ b/wiki/note-git-使用记录/index.html
@@ -35,13 +35,13 @@
 <p>
 蒋鑫. Git权威指南 机械工业出版社. Kindle 版本. 
 </p>
-<div id="outline-container-orgfc579aa" class="outline-2">
-<h2 id="orgfc579aa">git 独奏</h2>
-<div class="outline-text-2" id="text-orgfc579aa">
+<div id="outline-container-orgaf93cbf" class="outline-2">
+<h2 id="orgaf93cbf">git 独奏</h2>
+<div class="outline-text-2" id="text-orgaf93cbf">
 </div>
-<div id="outline-container-org4394c24" class="outline-3">
-<h3 id="org4394c24">git 初始化</h3>
-<div class="outline-text-3" id="text-org4394c24">
+<div id="outline-container-org9ce09e8" class="outline-3">
+<h3 id="org9ce09e8">git 初始化</h3>
+<div class="outline-text-3" id="text-org9ce09e8">
 <ul class="org-ul">
 <li><p>
 git init 
@@ -97,9 +97,9 @@ git config &lt;session&gt;.&lt;key&gt;
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc3e6f11" class="outline-3">
-<h3 id="orgc3e6f11">git 暂存区</h3>
-<div class="outline-text-3" id="text-orgc3e6f11">
+<div id="outline-container-org0e22d80" class="outline-3">
+<h3 id="org0e22d80">git 暂存区</h3>
+<div class="outline-text-3" id="text-org0e22d80">
 
 <div class="figure">
 <p><img src="http://7xpyfe.com1.z0.glb.clouddn.com/2017101515080826245091.png" alt="2017101515080826245091.png" />
@@ -169,9 +169,9 @@ git stash
 </ul>
 </div>
 </div>
-<div id="outline-container-org1e09eb6" class="outline-3">
-<h3 id="org1e09eb6">git reset 重置</h3>
-<div class="outline-text-3" id="text-org1e09eb6">
+<div id="outline-container-org3e50604" class="outline-3">
+<h3 id="org3e50604">git reset 重置</h3>
+<div class="outline-text-3" id="text-org3e50604">
 <ol class="org-ol">
 <li>git reset HEAD&lt;path&gt;  相当于取消 git add &lt;paths&gt; 操作</li>
 
@@ -193,9 +193,9 @@ git reset --hard master@{2}  重置master所有位置为两次改变之前的值
 </div>
 </div>
 
-<div id="outline-container-orgd6afedf" class="outline-3">
-<h3 id="orgd6afedf">git 检出</h3>
-<div class="outline-text-3" id="text-orgd6afedf">
+<div id="outline-container-org948bbcc" class="outline-3">
+<h3 id="org948bbcc">git 检出</h3>
+<div class="outline-text-3" id="text-org948bbcc">
 <ul class="org-ul">
 <li><p>
 git checkout branch_name
@@ -208,9 +208,9 @@ git branch -v
 </ul>
 </div>
 </div>
-<div id="outline-container-orgcd7b448" class="outline-3">
-<h3 id="orgcd7b448">git 恢复进度</h3>
-<div class="outline-text-3" id="text-orgcd7b448">
+<div id="outline-container-org62eef13" class="outline-3">
+<h3 id="org62eef13">git 恢复进度</h3>
+<div class="outline-text-3" id="text-org62eef13">
 <ul class="org-ul">
 <li><p>
 git stash
@@ -239,9 +239,9 @@ git stash branch &lt;branchname&gt;  基于进度创建分支
 </div>
 </div>
 
-<div id="outline-container-org226f3c7" class="outline-3">
-<h3 id="org226f3c7">git 基础操作</h3>
-<div class="outline-text-3" id="text-org226f3c7">
+<div id="outline-container-org4de8040" class="outline-3">
+<h3 id="org4de8040">git 基础操作</h3>
+<div class="outline-text-3" id="text-org4de8040">
 <ul class="org-ul">
 <li><p>
 删除文件
@@ -325,9 +325,9 @@ git archive -o partial.tar HEAD src doc  只归档两个文件夹
 </div>
 </div>
 
-<div id="outline-container-org35ff964" class="outline-3">
-<h3 id="org35ff964">git tools</h3>
-<div class="outline-text-3" id="text-org35ff964">
+<div id="outline-container-org50637d2" class="outline-3">
+<h3 id="org50637d2">git tools</h3>
+<div class="outline-text-3" id="text-org50637d2">
 <p>
 版本库浏览器能更好看提交关系图
 </p>
@@ -367,9 +367,9 @@ git bisect start
 </div>
 </div>
 
-<div id="outline-container-org9be5f40" class="outline-3">
-<h3 id="org9be5f40">改变历史</h3>
-<div class="outline-text-3" id="text-org9be5f40">
+<div id="outline-container-orgf79e7aa" class="outline-3">
+<h3 id="orgf79e7aa">改变历史</h3>
+<div class="outline-text-3" id="text-orgf79e7aa">
 <ul class="org-ul">
 <li><p>
 单步悔棋
@@ -394,9 +394,9 @@ git commit -m "new reason "
 </div>
 </div>
 
-<div id="outline-container-org89a0cfb" class="outline-3">
-<h3 id="org89a0cfb">git克隆</h3>
-<div class="outline-text-3" id="text-org89a0cfb">
+<div id="outline-container-org670fd9e" class="outline-3">
+<h3 id="org670fd9e">git克隆</h3>
+<div class="outline-text-3" id="text-org670fd9e">
 <ul class="org-ul">
 <li><p>
 git clone
@@ -420,13 +420,13 @@ git clone --mirror &lt;rep&gt; dir
 </div>
 </div>
 
-<div id="outline-container-org0e65279" class="outline-2">
-<h2 id="org0e65279">git 和声</h2>
-<div class="outline-text-2" id="text-org0e65279">
+<div id="outline-container-org305a435" class="outline-2">
+<h2 id="org305a435">git 和声</h2>
+<div class="outline-text-2" id="text-org305a435">
 </div>
-<div id="outline-container-org9cb5506" class="outline-3">
-<h3 id="org9cb5506">git 工作协调</h3>
-<div class="outline-text-3" id="text-org9cb5506">
+<div id="outline-container-orgd7a16e8" class="outline-3">
+<h3 id="orgd7a16e8">git 工作协调</h3>
+<div class="outline-text-3" id="text-orgd7a16e8">
 <ul class="org-ul">
 <li>支持的协议
 智能协议: 数据传输过程中有清晰的进度显示,按需传输，传输量小，速度快 (ssh,git,file//)  
@@ -466,9 +466,9 @@ git push
 </div>
 
 
-<div id="outline-container-orgd1b1c03" class="outline-3">
-<h3 id="orgd1b1c03">git 冲突解决</h3>
-<div class="outline-text-3" id="text-orgd1b1c03">
+<div id="outline-container-orga32bfda" class="outline-3">
+<h3 id="orga32bfda">git 冲突解决</h3>
+<div class="outline-text-3" id="text-orga32bfda">
 <p>
 git merge
 </p>
@@ -532,13 +532,13 @@ git add / git reset
 </div>
 </div>
 
-<div id="outline-container-org36dac6d" class="outline-2">
-<h2 id="org36dac6d"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
-<div class="outline-text-2" id="text-org36dac6d">
+<div id="outline-container-org48aa92f" class="outline-2">
+<h2 id="org48aa92f"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
+<div class="outline-text-2" id="text-org48aa92f">
 </div>
-<div id="outline-container-org434e8cd" class="outline-3">
-<h3 id="org434e8cd">git ls-files 乱码问题</h3>
-<div class="outline-text-3" id="text-org434e8cd">
+<div id="outline-container-org50b91fc" class="outline-3">
+<h3 id="org50b91fc">git ls-files 乱码问题</h3>
+<div class="outline-text-3" id="text-org50b91fc">
 <p>
 在 <code>~/.gitconfig</code> 中添加如下内容
 </p>
