--- a/wiki/note-git-使用记录/index.html
+++ b/wiki/note-git-使用记录/index.html
@@ -35,13 +35,13 @@
 <p>
 蒋鑫. Git权威指南 机械工业出版社. Kindle 版本. 
 </p>
-<div id="outline-container-orgaf93cbf" class="outline-2">
-<h2 id="orgaf93cbf">git 独奏</h2>
-<div class="outline-text-2" id="text-orgaf93cbf">
+<div id="outline-container-org870b6a0" class="outline-2">
+<h2 id="org870b6a0">git 独奏</h2>
+<div class="outline-text-2" id="text-org870b6a0">
 </div>
-<div id="outline-container-org9ce09e8" class="outline-3">
-<h3 id="org9ce09e8">git 初始化</h3>
-<div class="outline-text-3" id="text-org9ce09e8">
+<div id="outline-container-orgdd8a635" class="outline-3">
+<h3 id="orgdd8a635">git 初始化</h3>
+<div class="outline-text-3" id="text-orgdd8a635">
 <ul class="org-ul">
 <li><p>
 git init 
@@ -97,9 +97,9 @@ git config &lt;session&gt;.&lt;key&gt;
 </ul>
 </div>
 </div>
-<div id="outline-container-org0e22d80" class="outline-3">
-<h3 id="org0e22d80">git 暂存区</h3>
-<div class="outline-text-3" id="text-org0e22d80">
+<div id="outline-container-org1e77ded" class="outline-3">
+<h3 id="org1e77ded">git 暂存区</h3>
+<div class="outline-text-3" id="text-org1e77ded">
 
 <div class="figure">
 <p><img src="http://7xpyfe.com1.z0.glb.clouddn.com/2017101515080826245091.png" alt="2017101515080826245091.png" />
@@ -169,9 +169,9 @@ git stash
 </ul>
 </div>
 </div>
-<div id="outline-container-org3e50604" class="outline-3">
-<h3 id="org3e50604">git reset 重置</h3>
-<div class="outline-text-3" id="text-org3e50604">
+<div id="outline-container-org8b0eb5f" class="outline-3">
+<h3 id="org8b0eb5f">git reset 重置</h3>
+<div class="outline-text-3" id="text-org8b0eb5f">
 <ol class="org-ol">
 <li>git reset HEAD&lt;path&gt;  相当于取消 git add &lt;paths&gt; 操作</li>
 
@@ -193,9 +193,9 @@ git reset --hard master@{2}  重置master所有位置为两次改变之前的值
 </div>
 </div>
 
-<div id="outline-container-org948bbcc" class="outline-3">
-<h3 id="org948bbcc">git 检出</h3>
-<div class="outline-text-3" id="text-org948bbcc">
+<div id="outline-container-orgd073d03" class="outline-3">
+<h3 id="orgd073d03">git 检出</h3>
+<div class="outline-text-3" id="text-orgd073d03">
 <ul class="org-ul">
 <li><p>
 git checkout branch_name
@@ -208,9 +208,9 @@ git branch -v
 </ul>
 </div>
 </div>
-<div id="outline-container-org62eef13" class="outline-3">
-<h3 id="org62eef13">git 恢复进度</h3>
-<div class="outline-text-3" id="text-org62eef13">
+<div id="outline-container-org8fdf294" class="outline-3">
+<h3 id="org8fdf294">git 恢复进度</h3>
+<div class="outline-text-3" id="text-org8fdf294">
 <ul class="org-ul">
 <li><p>
 git stash
@@ -239,9 +239,9 @@ git stash branch &lt;branchname&gt;  基于进度创建分支
 </div>
 </div>
 
-<div id="outline-container-org4de8040" class="outline-3">
-<h3 id="org4de8040">git 基础操作</h3>
-<div class="outline-text-3" id="text-org4de8040">
+<div id="outline-container-orgad9c2dd" class="outline-3">
+<h3 id="orgad9c2dd">git 基础操作</h3>
+<div class="outline-text-3" id="text-orgad9c2dd">
 <ul class="org-ul">
 <li><p>
 删除文件
@@ -325,9 +325,9 @@ git archive -o partial.tar HEAD src doc  只归档两个文件夹
 </div>
 </div>
 
-<div id="outline-container-org50637d2" class="outline-3">
-<h3 id="org50637d2">git tools</h3>
-<div class="outline-text-3" id="text-org50637d2">
+<div id="outline-container-org19fc985" class="outline-3">
+<h3 id="org19fc985">git tools</h3>
+<div class="outline-text-3" id="text-org19fc985">
 <p>
 版本库浏览器能更好看提交关系图
 </p>
@@ -367,9 +367,9 @@ git bisect start
 </div>
 </div>
 
-<div id="outline-container-orgf79e7aa" class="outline-3">
-<h3 id="orgf79e7aa">改变历史</h3>
-<div class="outline-text-3" id="text-orgf79e7aa">
+<div id="outline-container-org98570ae" class="outline-3">
+<h3 id="org98570ae">改变历史</h3>
+<div class="outline-text-3" id="text-org98570ae">
 <ul class="org-ul">
 <li><p>
 单步悔棋
@@ -394,9 +394,9 @@ git commit -m "new reason "
 </div>
 </div>
 
-<div id="outline-container-org670fd9e" class="outline-3">
-<h3 id="org670fd9e">git克隆</h3>
-<div class="outline-text-3" id="text-org670fd9e">
+<div id="outline-container-org3178d2b" class="outline-3">
+<h3 id="org3178d2b">git克隆</h3>
+<div class="outline-text-3" id="text-org3178d2b">
 <ul class="org-ul">
 <li><p>
 git clone
@@ -420,13 +420,13 @@ git clone --mirror &lt;rep&gt; dir
 </div>
 </div>
 
-<div id="outline-container-org305a435" class="outline-2">
-<h2 id="org305a435">git 和声</h2>
-<div class="outline-text-2" id="text-org305a435">
+<div id="outline-container-org8891125" class="outline-2">
+<h2 id="org8891125">git 和声</h2>
+<div class="outline-text-2" id="text-org8891125">
 </div>
-<div id="outline-container-orgd7a16e8" class="outline-3">
-<h3 id="orgd7a16e8">git 工作协调</h3>
-<div class="outline-text-3" id="text-orgd7a16e8">
+<div id="outline-container-org9c9dac1" class="outline-3">
+<h3 id="org9c9dac1">git 工作协调</h3>
+<div class="outline-text-3" id="text-org9c9dac1">
 <ul class="org-ul">
 <li>支持的协议
 智能协议: 数据传输过程中有清晰的进度显示,按需传输，传输量小，速度快 (ssh,git,file//)  
@@ -466,9 +466,9 @@ git push
 </div>
 
 
-<div id="outline-container-orga32bfda" class="outline-3">
-<h3 id="orga32bfda">git 冲突解决</h3>
-<div class="outline-text-3" id="text-orga32bfda">
+<div id="outline-container-orgf11ca43" class="outline-3">
+<h3 id="orgf11ca43">git 冲突解决</h3>
+<div class="outline-text-3" id="text-orgf11ca43">
 <p>
 git merge
 </p>
@@ -532,13 +532,13 @@ git add / git reset
 </div>
 </div>
 
-<div id="outline-container-org48aa92f" class="outline-2">
-<h2 id="org48aa92f"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
-<div class="outline-text-2" id="text-org48aa92f">
+<div id="outline-container-orgff95bc8" class="outline-2">
+<h2 id="orgff95bc8"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
+<div class="outline-text-2" id="text-orgff95bc8">
 </div>
-<div id="outline-container-org50b91fc" class="outline-3">
-<h3 id="org50b91fc">git ls-files 乱码问题</h3>
-<div class="outline-text-3" id="text-org50b91fc">
+<div id="outline-container-org92a23c1" class="outline-3">
+<h3 id="org92a23c1">git ls-files 乱码问题</h3>
+<div class="outline-text-3" id="text-org92a23c1">
 <p>
 在 <code>~/.gitconfig</code> 中添加如下内容
 </p>
