--- a/wiki/note-spark-use/index.html
+++ b/wiki/note-spark-use/index.html
@@ -35,9 +35,9 @@
 <p>
 Spark快速大数据分析[美] 卡劳（Holden Karau）
 </p>
-<div id="outline-container-org6b863ff" class="outline-2">
-<h2 id="org6b863ff">what is spark</h2>
-<div class="outline-text-2" id="text-org6b863ff">
+<div id="outline-container-org274b48b" class="outline-2">
+<h2 id="org274b48b">what is spark</h2>
+<div class="outline-text-2" id="text-org274b48b">
 <p>
 spark 是一个用来实现快速而通用的集群计算的平台
 </p>
@@ -66,16 +66,16 @@ python shell / scala shell</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org1e59f17" class="outline-2">
-<h2 id="org1e59f17">RDD</h2>
-<div class="outline-text-2" id="text-org1e59f17">
+<div id="outline-container-org7a2be33" class="outline-2">
+<h2 id="org7a2be33">RDD</h2>
+<div class="outline-text-2" id="text-org7a2be33">
 <p>
 RDD(resilient distributed dataset)
 </p>
 </div>
-<div id="outline-container-org1321a07" class="outline-3">
-<h3 id="org1321a07">RDD基础</h3>
-<div class="outline-text-3" id="text-org1321a07">
+<div id="outline-container-org0f3c28b" class="outline-3">
+<h3 id="org0f3c28b">RDD基础</h3>
+<div class="outline-text-3" id="text-org0f3c28b">
 <p>
 Spark中的RDD是一个不可变的分布式对象集合
 </p>
@@ -83,30 +83,30 @@ Spark中的RDD是一个不可变的分布式对象集合
 </div>
 </div>
 
-<div id="outline-container-orgb71f93a" class="outline-2">
-<h2 id="orgb71f93a">spark use</h2>
-<div class="outline-text-2" id="text-orgb71f93a">
+<div id="outline-container-orga0d7234" class="outline-2">
+<h2 id="orga0d7234">spark use</h2>
+<div class="outline-text-2" id="text-orga0d7234">
 </div>
-<div id="outline-container-org891e869" class="outline-3">
-<h3 id="org891e869">spark base</h3>
-<div class="outline-text-3" id="text-org891e869">
+<div id="outline-container-org1263a25" class="outline-3">
+<h3 id="org1263a25">spark base</h3>
+<div class="outline-text-3" id="text-org1263a25">
 <p>
 rdd(resilient distributed dataset)
 </p>
 </div>
 </div>
-<div id="outline-container-org2fb01cb" class="outline-3">
-<h3 id="org2fb01cb">spark install</h3>
-<div class="outline-text-3" id="text-org2fb01cb">
+<div id="outline-container-org754a756" class="outline-3">
+<h3 id="org754a756">spark install</h3>
+<div class="outline-text-3" id="text-org754a756">
 <p>
 函数式编程
 shell下执行:paste
 </p>
 </div>
 </div>
-<div id="outline-container-org348cfa3" class="outline-3">
-<h3 id="org348cfa3">spark shell</h3>
-<div class="outline-text-3" id="text-org348cfa3">
+<div id="outline-container-org6a14274" class="outline-3">
+<h3 id="org6a14274">spark shell</h3>
+<div class="outline-text-3" id="text-org6a14274">
 <p>
 bin/spark-shell
 </p>
@@ -126,9 +126,9 @@ filter()</li>
 </div>
 </div>
 
-<div id="outline-container-org342986e" class="outline-3">
-<h3 id="org342986e">idea spark scala</h3>
-<div class="outline-text-3" id="text-org342986e">
+<div id="outline-container-orgeb76aad" class="outline-3">
+<h3 id="orgeb76aad">idea spark scala</h3>
+<div class="outline-text-3" id="text-orgeb76aad">
 <p>
 scala 项目手动打包
 删除scala 和spark的包
@@ -144,25 +144,25 @@ sbt 构建项目 需要等待sbt版本下载好才会生成src目录
 </div>
 </div>
 
-<div id="outline-container-orgb477b2d" class="outline-3">
-<h3 id="orgb477b2d">idea spark java</h3>
-<div class="outline-text-3" id="text-orgb477b2d">
+<div id="outline-container-org3681639" class="outline-3">
+<h3 id="org3681639">idea spark java</h3>
+<div class="outline-text-3" id="text-org3681639">
 <ol class="org-ol">
 <li>jre 1.5 换成1.8</li>
 </ol>
 </div>
 </div>
-<div id="outline-container-orgb063dd7" class="outline-3">
-<h3 id="orgb063dd7">rdd &amp; dataframe</h3>
+<div id="outline-container-org4da2f1c" class="outline-3">
+<h3 id="org4da2f1c">rdd &amp; dataframe</h3>
 </div>
 </div>
-<div id="outline-container-orgf0bdc7f" class="outline-2">
-<h2 id="orgf0bdc7f">docker spark</h2>
-<div class="outline-text-2" id="text-orgf0bdc7f">
+<div id="outline-container-org90f2f38" class="outline-2">
+<h2 id="org90f2f38">docker spark</h2>
+<div class="outline-text-2" id="text-org90f2f38">
 </div>
-<div id="outline-container-orgdb5926f" class="outline-3">
-<h3 id="orgdb5926f">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
-<div class="outline-text-3" id="text-orgdb5926f">
+<div id="outline-container-orgaca2a92" class="outline-3">
+<h3 id="orgaca2a92">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
+<div class="outline-text-3" id="text-orgaca2a92">
 <p>
 refer : <a href="http://blog.csdn.net/gogo_yao/article/details/76863201">http://blog.csdn.net/gogo_yao/article/details/76863201</a>
 </p>
@@ -213,17 +213,17 @@ cd <i>root</i>.local/spark-2.2.0-bin-without-hadoop/sbin; sh start-all.sh
 </ol>
 </div>
 </div>
-<div id="outline-container-org3410c01" class="outline-3">
-<h3 id="org3410c01">docker search spark</h3>
-<div class="outline-text-3" id="text-org3410c01">
+<div id="outline-container-org52463b3" class="outline-3">
+<h3 id="org52463b3">docker search spark</h3>
+<div class="outline-text-3" id="text-org52463b3">
 <p>
 docker pull sequenceiq/spark:1.6.0
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-orgd102d50" class="outline-2">
-<h2 id="orgd102d50">docker hbase</h2>
+<div id="outline-container-org08e6727" class="outline-2">
+<h2 id="org08e6727">docker hbase</h2>
 </div>
 
 </div>
